--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -85,6 +86,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
