--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,6 +13,6 @@
     "types": ["node"],
     "allowJs": true
   },
-  "include": ["src/**/*.ts", "src/**/*.js"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/config/config.cjs"],
   "exclude": ["node_modules", "src/tests"]
 }
